--- a/batch_layer_rename/manifest.json
+++ b/batch_layer_rename/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifestVersion": 5,
-  "id": "nrj.rename-layers",
-  "name": "Rename Layers",
+  "id": "nrj.layer-utility",
+  "name": "Layer Utilities",
   "version": "1.0.0",
   "main": "index.html",
   "author": "Nathan Jones",
@@ -17,25 +17,25 @@
   "entrypoints": [
     {
       "type": "panel",
-      "id": "nrj.rename-layers",
+      "id": "nrj.layer-utility",
       "label": {
-        "default": "Layer Renamer"
+        "default": "Layer Utilities"
       },
       "minimumSize": {
-        "width": 300,
+        "width": 450,
         "height": 300
       },
       "maximumSize": {
         "width": 600,
-        "height": 500
+        "height": 1000
       },
       "preferredDockedSize": {
-        "width": 300,
-        "height": 400
+        "width": 450,
+        "height": 500
       },
       "preferredFloatingSize": {
         "width": 450,
-        "height": 500
+        "height": 600
       }
     }
   ],
