--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .venv/*
 testing/
+psd_exporter/Area31_Cooking_School_TEST_EXPORT.psd
+psd_exporter/Area31_Cooking_School_TEST.psd
+psd_exporter/Test_PSD_2.psd
+psd_exporter/Test_PSD.psd
